objects/Warm_Lead__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Institution</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Warm Leads</relationshipLabel>
        <relationshipName>Warm_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Advisory_com_Initiating_Page_Program__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Advisory.com Initiating Page Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Status__c</fullName>
        <label>Attendee Status</label>
        <picklist>
            <picklistValues>
                <fullName>Registered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No-Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invited</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>C_Suite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>C Suite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Warm Leads</relationshipLabel>
        <relationshipName>Warm_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Comments</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <formula>Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Warm Leads</relationshipLabel>
        <relationshipName>Warm_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_level__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Contact Level</label>
        <picklist>
            <picklistValues>
                <fullName>CXO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Count_Goal__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Count Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Counter_ID__c</fullName>
        <displayFormat>W{00000000}</displayFormat>
        <externalId>true</externalId>
        <label>Counter ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Current_YTD_Leads__c</fullName>
        <formula>IF( 
	(Year( Today()) = Year(Lead_Date__c)) 
	&amp;&amp; (Lead_Date__c &lt;= Today()), 
	1, 
	0
	)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current YTD Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Of_First_EL__c</fullName>
        <description>Created for CR-20160610-9915.</description>
        <label>Date Of First EL</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_To_Follow_Up__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <formula>IF(
	ISNULL(Followed_Up_Date__c),
	null,
	IF(
		DateValue(CreatedDate) &gt; Lead_Date__c,
		If(
			Followed_Up_Date__c - DateValue(CreatedDate) &lt; 0,
			0,
			Followed_Up_Date__c - DateValue(CreatedDate)
		),
		If(
			Followed_Up_Date__c - Lead_Date__c &lt; 0,
			0,
			Followed_Up_Date__c - Lead_Date__c
		)
	)
)</formula>
        <label>Days To Follow Up</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eloqua_Snapshot_Topic_1__c</fullName>
        <description>CR-4795. This field is populated via workflow from the field &quot;Eloqua_Score_Topic_1__c&quot; on Contact.</description>
        <label>Eloqua Snapshot: Pop Health</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eloqua_Snapshot_Topic_2__c</fullName>
        <description>CR-4795. This field is populated via workflow from the field &quot;Eloqua_Score_Topic_2__c&quot; on Contact.</description>
        <label>Eloqua Snapshot: Rev Cycle</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eloqua_Snapshot_Topic_3__c</fullName>
        <description>CR-4795. This field is populated via workflow from the field &quot;Eloqua_Score_Topic_3__c&quot; on Contact.</description>
        <label>Eloqua Snapshot: Patient Engagement</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eloqua_Snapshot_Topic_EAB__c</fullName>
        <description>CR-4795. This field is populated via workflow from the field &quot;Eloqua_Score_Topic_EAB__c&quot; on Contact.</description>
        <label>Eloqua Snapshot: EAB</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ever_Initial_Activity__c</fullName>
        <description>Created for CR-20140613-5790.</description>
        <formula>IF (
ISBLANK (Initial_Activity_Date__c), 
        &apos;No&apos;, 
        IF (Initial_Activity_Date__c &lt; Lead_Date__c, 
            &apos;Prior Activity&apos;, 
            &apos;Yes&apos;
        )
       )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ever Initial Activity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ever_Initial_PA__c</fullName>
        <description>Created for CR-20140613-5790.</description>
        <formula>IF( ISBLANK( Initial_PA_Date__c ) ,
&apos;No&apos;,
 IF( Initial_PA_Date__c  &lt;  Lead_Date__c  ,
&apos;Prior PA&apos;,
&apos;Yes&apos;
 )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ever Initial PA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ever_Visited__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <formula>IF(Isblank( Initial_Visit_Date__c ), &quot;No&quot;, 
IF(Initial_Visit_Date__c&lt; Lead_Date__c , &quot;Prior Visit&quot;, 
&quot;Yes&quot;))</formula>
        <label>Ever Visited?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Followed_Up_Date__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Followed-Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Followed_Up_Within_1_Week__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <formula>IF( 
	AND(
		NOT(ISNULL(Days_To_Follow_Up__c)),
		Days_To_Follow_Up__c &lt;= 7
	),
	1,
	0
)</formula>
        <inlineHelpText>The field is a formula that evaluates to 1 if &apos;days to follow up is not null/blank and &lt;=7.</inlineHelpText>
        <label>Followed Up Within 1 Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal_Period__c</fullName>
        <label>Goal Period</label>
        <picklist>
            <picklistValues>
                <fullName>Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Grade</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>In_Current_Year__c</fullName>
        <formula>IF(ISBLANK(Lead_Date__c), 0,
IF(YEAR(Lead_Date__c) = YEAR(TODAY()), 1, 0))</formula>
        <label>In Current Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_Previous_Year__c</fullName>
        <formula>IF(ISBLANK(Lead_Date__c), 0,
IF(YEAR(Lead_Date__c) = YEAR(TODAY()) - 1, 1, 0))</formula>
        <label>In Previous Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Activity_Counter__c</fullName>
        <description>Created for CR-20140613-5790.</description>
        <formula>IF( Ever_Initial_Activity__c = &apos;Yes&apos;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Activity Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Activity_Date__c</fullName>
        <description>CR-20140613-5790. Minimum Opportunity Initial Activity of all related Warm Lead MtMs.</description>
        <label>Initial Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Eloqua_Lead_Rating__c</fullName>
        <description>Auto-populates the Contact&apos;s Eloqua Lead Rating at the time the lead is created. Rating is a mixture of Contact level and Contact engagement at that time.Origin field is connected to Eloqua through Integration. CR-3545</description>
        <inlineHelpText>Auto-populates the Contact&apos;s Eloqua Lead Rating at the time the lead is created. Rating is a mixture of Contact level and Contact engagement at that time.</inlineHelpText>
        <label>Initial Eloqua Lead Rating</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Exec_Call_Date__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Initial Exec Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_PA_Counter__c</fullName>
        <description>Created for CR-20140613-5790.</description>
        <formula>IF( Ever_Initial_PA__c = &apos;Yes&apos;, 1, 0)</formula>
        <label>Initial PA Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_PA_Date__c</fullName>
        <description>CR-20140613-5790. Minimum Opportunity Initial PA of all related Warm Lead MtMs.</description>
        <label>Initial PA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Visit_Count__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <formula>IF( Ever_Visited__c = &quot;Yes&quot;, 1, 0)</formula>
        <label>Initial Visit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Visit_Date_Last_Year__c</fullName>
        <formula>IF( Ever_Visited__c = &quot;Yes&quot;,
IF(YEAR( Initial_Visit_Date__c ) = YEAR(TODAY()) - 1, 1, 0),
0)</formula>
        <label>Initial Visit Date Last Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Visit_Date_This_Year__c</fullName>
        <formula>IF( Ever_Visited__c = &quot;Yes&quot;,
IF(YEAR( Initial_Visit_Date__c ) = YEAR(TODAY()), 1, 0),
0)</formula>
        <label>Initial Visit Date This Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Visit_Date__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Initial Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Visit_No_Count__c</fullName>
        <description>Sifter #262 - formula modified</description>
        <formula>IF( Ever_Visited__c = &quot;No&quot;, 1, 0)</formula>
        <label>Initial Visit No Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Joint_LOA_Activity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Joint LOA/Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LHI_Pass_Date__c</fullName>
        <description>Created by CR 7737</description>
        <label>LHI (Pass Date)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LHI__c</fullName>
        <description>Created by CR 7737</description>
        <label>LHI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Channel__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Lead Event</label>
        <picklist>
            <picklistValues>
                <fullName>Breakout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CG - Archived Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CG - Benchmarks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CG - Case Study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CG - Infographic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CG - Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CG - Tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CG - Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CG - Whitepaper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct to Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSPI Summit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaking Engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy Retreat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tradeshow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Date_YTD_Date__c</fullName>
        <formula>IF(
	AND((MONTH(Lead_Date__c) = 2), 
		(DAY(Lead_Date__c) = 29)
		),
	DATE( YEAR( TODAY() ) , 2 , 28) ,
	DATE( YEAR( TODAY() ) , MONTH( Lead_Date__c ) , Day(Lead_Date__c))
	)</formula>
        <label>Lead Date YTD Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Date__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Lead Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Date_from_2_Years_Ago__c</fullName>
        <formula>IF(YEAR(Lead_Date__c) = YEAR(TODAY()) - 2, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Date from 2 Years Ago</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Date_in_Current_Quarter__c</fullName>
        <formula>IF(MONTH(Lead_Date__c) &gt;= 1 &amp;&amp; MONTH(Lead_Date__c) &lt;= 3 &amp;&amp; MONTH(TODAY()) &gt;= 1 &amp;&amp; MONTH(TODAY()) &lt;=3,
	1,

	IF(MONTH(Lead_Date__c) &gt;= 4 &amp;&amp; MONTH(Lead_Date__c) &lt;= 6 &amp;&amp; MONTH(TODAY()) &gt;= 4 &amp;&amp; MONTH(TODAY()) &lt;=6,
		1,

		IF(MONTH(Lead_Date__c) &gt;= 7 &amp;&amp; MONTH(Lead_Date__c) &lt;= 9 &amp;&amp; MONTH(TODAY()) &gt;= 7 &amp;&amp; MONTH(TODAY()) &lt;=9,
		1,

			IF(MONTH(Lead_Date__c) &gt;= 10 &amp;&amp; MONTH(Lead_Date__c) &lt;= 12 &amp;&amp; MONTH(TODAY()) &gt;= 10 &amp;&amp; MONTH(TODAY()) &lt;=12,
			1,
			0
			)
		)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Date in Current Quarter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Date_in_Current_Year__c</fullName>
        <formula>IF(YEAR(Lead_Date__c) = YEAR(TODAY()), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Date in Current Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Date_in_Previous_Year__c</fullName>
        <formula>IF(YEAR(Lead_Date__c) = YEAR(TODAY()) - 1, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Date in Previous Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Goal__c</fullName>
        <label>Lead Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Origin__c</fullName>
        <description>CR-1961</description>
        <label>Lead Origin</label>
        <picklist>
            <picklistValues>
                <fullName>Advisory.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eloqua-Daily Briefing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eloqua-Direct Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eloqua-Internal Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eloqua-MA Outreach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eloqua-MKTG Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eloqua-MKTG Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eloqua-Paid Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eloqua-Product Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eloqua-Pure Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email/Voicemail Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Historic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSPI Summit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA Outreach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Offer (Event/Webinar)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Approach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy Retreat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turnover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm Intelligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Leads_for_Initial_Activity_Counter__c</fullName>
        <description>Created for CR-20140613-5790.</description>
        <formula>IF( Ever_Initial_Activity__c =  &apos;Prior Activity&apos;, 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leads for Initial Activity Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leads_for_Initial_PA_Counter__c</fullName>
        <description>Created for CR-20140613-5790.</description>
        <formula>IF( Ever_Initial_PA__c  = &apos;Prior PA&apos;, 0, 1 )</formula>
        <label>Leads for Initial PA Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leads_for_Visit_Counter__c</fullName>
        <formula>IF(Ever_Visited__c = &apos;Prior Visit&apos;, 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leads for Visit Counter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_Warm_Lead_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Warm Lead ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Marketer_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Marketer Assignment</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Warm_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketing_Associate_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Marketing Associate Assignment</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Warm_Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meeting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meeting</label>
        <referenceTo>Meeting__c</referenceTo>
        <relationshipLabel>Warm Leads</relationshipLabel>
        <relationshipName>Warm_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Microsite_ID__c</fullName>
        <label>Microsite ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_MA_Warm_Leads__c</fullName>
        <formula>if( Marketing_Associate_Assignment__r.Id = $User.Id , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My MA Warm Leads</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NBB_Goal__c</fullName>
        <label>NBB Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NPD_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for CR-20160128-9567.</description>
        <inlineHelpText>Check this box if not for immediate commercial follow up.</inlineHelpText>
        <label>NPD Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Next Step</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Warm_Leads__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Number of Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OAB_Leads__c</fullName>
        <description>total of OAB leads on related OAB lead passers</description>
        <label>OAB Leads</label>
        <summarizedField>OAB_Lead_Passer__c.Lead_Count_2__c</summarizedField>
        <summaryForeignKey>OAB_Lead_Passer__c.Warm_Lead__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OAB_NBB__c</fullName>
        <description>Sum of OAB NBB Credit from related OAB Lead Passers</description>
        <label>OAB NBB</label>
        <summarizedField>OAB_Lead_Passer__c.OAB_NBB_Credit__c</summarizedField>
        <summaryForeignKey>OAB_Lead_Passer__c.Warm_Lead__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OAB_Units__c</fullName>
        <description>sum of oab units on related oab lead passer records</description>
        <label>OAB Units</label>
        <summarizedField>OAB_Lead_Passer__c.OAB_Unit_Credit__c</summarizedField>
        <summaryForeignKey>OAB_Lead_Passer__c.Warm_Lead__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Warm Leads</relationshipLabel>
        <relationshipName>Warm_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outcome_Type__c</fullName>
        <inlineHelpText>Copied from the related Outcome record when created</inlineHelpText>
        <label>Outcome Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Warm_Lead__c</fullName>
        <description>Equals 1 if &quot;Total_Outreach_Warm_Lead__c&quot; field &gt; 0, otherwise 0 (used for % of leads with outreach).</description>
        <formula>IF( Total_Outreach_Warm_Lead__c &gt; 0, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outreach</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Presentation_ID__c</fullName>
        <externalId>true</externalId>
        <label>Presentation ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_YTD_OAB_NBB_Units__c</fullName>
        <label>Prev YTD OAB NBB Units</label>
        <summarizedField>OAB_Lead_Passer__c.Prev_YTD_OAB_Units__c</summarizedField>
        <summaryForeignKey>OAB_Lead_Passer__c.Warm_Lead__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prev_YTD_OAB_NBB__c</fullName>
        <label>Prev YTD OAB NBB</label>
        <summarizedField>OAB_Lead_Passer__c.Prev_YTD_OAB_NBB__c</summarizedField>
        <summaryForeignKey>OAB_Lead_Passer__c.Warm_Lead__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>